[package]
name = "buzzrelay"
version = "0.1.0"
edition = "2021"
repository = "https://github.com/astro/buzzrelay"
homepage = "https://relay.fedi.buzz"

[dependencies]
axum = "0.7"
tower-http = { version = "0.5", features = ["fs"] }
tokio = { version = "1", features = ["full", "time"] }
tracing = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
reqwest = { version = "0.12", features = ["json", "stream", "hickory-dns", "rustls-tls"] }
sigh = "1.0"
http_digest_headers = { version = "0.1.0", default-features = false, features = ["use_openssl"] }
thiserror = "1"
http = "1"
chrono = "0.4"
eventsource-stream = "0.2"
futures = "0.3"
tokio-postgres = "0.7"
systemd = "0.10"
metrics = "0.22"
metrics-util = "0.16"
metrics-exporter-prometheus = "0.14"
deunicode = "1.4"
urlencoding = "2"
httpdate = "1"
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }
lru = "0.12"
